<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_select_transportation_mode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/background2"
    tools:context="alex.carbon_tracker.UI.SelectTransportationModeActivity">


    <ImageView
        android:layout_width="400dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/carbontrackerlogo5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView4" />

    <TextView
        android:text="@string/SelectTransportationHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/textView2"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/bus"
        android:id="@+id/buttonSelectBus"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="@drawable/button_shape" />

    <Button
        android:text="@string/skytrain"
        android:layout_marginTop="10dp"
        android:id="@+id/buttonSelectSkyTrain"
        android:layout_below="@+id/buttonSelectBus"
        android:layout_alignParentStart="true"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="@drawable/button_shape" />

    <Button
        android:text="@string/DisplayVehicle"
        android:id="@+id/buttonSelectVehicle"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/buttonSelectSkyTrain"
        android:layout_alignParentStart="true"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="@drawable/button_shape" />

    <Button
        android:text="@string/walk"
        android:id="@+id/buttonSelectWalk"
        android:layout_above="@+id/buttonSelectBus"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="@drawable/button_shape" />


</RelativeLayout>
