<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/background2"
    tools:context="alex.carbon_tracker.UI.MenuActivity">

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/textView19"
        android:maxLines="6"
        android:scrollHorizontally="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text=""
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorPrimaryDark"
        android:layout_height="100dp" />

    <Button
        android:text="@string/MainAddJourneyButton"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:id="@+id/journeyListButton"
        android:background="@drawable/button_shape"
        android:layout_centerVertical="true"
        />

    <Button
        android:text="@string/viewUtility"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:id="@+id/utilityListButton"
        android:background="@drawable/button_shape"

        android:layout_above="@+id/textView19"
        android:layout_toEndOf="@+id/textView19" />

    <Button
        android:text="@string/aboutButton"
        android:layout_height="50dp"
        android:id="@+id/aboutButton"
        android:background="@drawable/button_shape"
        android:layout_width="100dp"
        android:layout_alignBottom="@+id/utilityListButton"
        android:layout_alignStart="@+id/tipsButton" />

    <Button
        android:text="@string/tipsButton"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:id="@+id/tipsButton"
        android:background="@drawable/button_shape"
        android:layout_alignTop="@+id/journeyListButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:text="@string/ViewGraph"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:id="@+id/graphListButton"
        android:background="@drawable/button_shape"
        android:layout_alignBottom="@+id/aboutButton"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/logo3"
        android:id="@+id/imageView6"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
